Different way to deduce systray's corona

when unloading the shell due to look and feel change,
as object get deleted from the parent to the children,
the panel gets deleted and during its dtor before the
children (the systray container and then the systray)
get actually deleted, corona emits an
availableScreenRect/RegionChanged, the systray containment
searches for its own screen, but it can't find its corona
anymore because a containment in the hierarchy is not
a containment anymore but just a QObject

BUG:477067