src/plasma/containment.cpp
@@ -298,13 +298,15 @@ Plasma::Containment::Type Containment::containmentType() const
 
 Corona *Containment::corona() const
 {
-    if (Plasma::Corona *corona = qobject_cast<Corona *>(parent())) {
-        return corona;
-        // case in which this containment is child of an applet, hello systray :)
-    } else {
-        Plasma::Applet *parentApplet = qobject_cast<Plasma::Applet *>(parent());
-        if (parentApplet && parentApplet->containment()) {
-            return parentApplet->containment()->corona();
+    // We are not sure where the corona parent is in the hyerarchy, because of... the systray.
+    // We are iterating over the parent tree here rather than casting the parent
+    // to applet then asking ofr its containment and corona, as this might break during
+    // teardown, as this can be invoked during dtor of one of the ancestors,
+    // see https://bugs.kde.org/show_bug.cgi?id=477067 where it happens during destruction
+    // of the panel (containment of the applet that contains the systray containment)
+    for (auto candidate = parent(); candidate; candidate = candidate->parent()) {
+        if (auto c = qobject_cast<Corona *>(candidate)) {
+            return c;
         }
     }
 
